Created rnn pytorch cmd args

--- a/pycompss_analysis/test.ipynb
+++ b/pycompss_analysis/test.ipynb
@@ -3,6 +3,60 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "626cda98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Python program to explain os.sched_setaffinity() method   \n",
+    "  \n",
+    "# # importing os module  \n",
+    "# import os \n",
+    "  \n",
+    "# # Get the number of CPUs \n",
+    "# # in the system \n",
+    "# # using os.cpu_count() method \n",
+    "# print(\"Number of CPUs:\", os.cpu_count()) \n",
+    "  \n",
+    "# # Get the set of CPUs \n",
+    "# # on which the calling process \n",
+    "# # is eligible to run. using \n",
+    "# # os.sched_getaffinity() method \n",
+    "# # 0 as PID represents the \n",
+    "# # calling process \n",
+    "# pid = 0\n",
+    "# affinity = os.sched_getaffinity(pid) \n",
+    "  \n",
+    "# # Print the result \n",
+    "# print(\"Process is eligible to run on:\", affinity) \n",
+    "  \n",
+    "  \n",
+    "# # Change the CPU affinity mask \n",
+    "# # of the calling process \n",
+    "# # using os.sched_setaffinity() method \n",
+    "  \n",
+    "# # Below CPU affinity mask will \n",
+    "# # restrict a process to only \n",
+    "# # these 2 CPUs (0, 1) i.e process can \n",
+    "# # run on these CPUs only \n",
+    "# affinity_mask = {0} \n",
+    "# pid = 0\n",
+    "# os.sched_setaffinity(0, affinity_mask) \n",
+    "# print(\"CPU affinity mask is modified for process id % s\" % pid)  \n",
+    "  \n",
+    "  \n",
+    "# # Now again, Get the set of CPUs \n",
+    "# # on which the calling process \n",
+    "# # is eligible to run. \n",
+    "# pid = 0\n",
+    "# affinity = os.sched_getaffinity(pid) \n",
+    "  \n",
+    "# # Print the result \n",
+    "# print(\"Now, process is eligible to run on:\", affinity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "31c88cf5",
    "metadata": {},
    "outputs": [
@@ -31,7 +85,7 @@
       "*                                     ~-.<             *\n",
       "********************************************************\n",
       "* - Starting COMPSs runtime...                         *\n",
-      "* - Log path : /home/naman/.COMPSs/Interactive_92/\n",
+      "* - Log path : /home/naman/.COMPSs/Interactive_98/\n",
       "* - PyCOMPSs Runtime started... Have fun!              *\n",
       "********************************************************\n"
      ]
@@ -52,13 +106,13 @@
     "                    project_xml='../xml/project.xml',\n",
     "                    resources_xml='../xml/resources.xml')\n",
     "else:\n",
-    "    ipycompss.start(graph=True, monitor=1000, debug=True, trace=True)  # \n",
+    "    ipycompss.start(graph=True, monitor=1000)  # debug=True, trace=True\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "289e4d61",
    "metadata": {},
    "outputs": [
@@ -66,13 +120,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task definition detected.\n",
       "Found task: initialize_parameters\n",
-      "Task definition detected.\n",
       "Found task: embedding_convert\n",
-      "Task definition detected.\n",
       "Found task: rnn_cell_computation\n",
-      "Task definition detected.\n",
       "Found task: output_one_hot\n"
      ]
     }
@@ -155,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6977b5a6",
    "metadata": {},
    "outputs": [
@@ -168,19 +218,7 @@
       "********************************************************\n",
       "Checking if any issue happened.\n",
       "Synchronizing all future objects left on the user scope.\n",
-      "Found a list to synchronize: output_vector\n",
-      "Found a list to synchronize: hidden_vector\n",
-      "Found a future object: input\n",
-      "Found a future object: hidden_state\n",
-      "********************************************************\n",
-      "Results after stopping PyCOMPSs: \n",
-      "tensor([[0.4806, 0.3372, 0.4822,  ..., 0.4428, 0.0241, 0.8896],\n",
-      "        [0.9135, 0.4518, 0.5021,  ..., 0.4548, 0.4137, 0.8640],\n",
-      "        [0.6062, 0.7916, 0.6627,  ..., 0.9395, 0.7221, 0.3663],\n",
-      "        ...,\n",
-      "        [0.1198, 0.1505, 0.1034,  ..., 0.8099, 0.8896, 0.1454],\n",
-      "        [0.7894, 0.4571, 0.5323,  ..., 0.5311, 0.6967, 0.6274],\n",
-      "        [0.8228, 0.3518, 0.2896,  ..., 0.2195, 0.4571, 0.2437]])\n"
+      "Found a list to synchronize: output_vector\n"
      ]
     }
    ],
